@@ -1,34 +1,32 @@
 package com.braalex.brewery.security;
 
+import com.braalex.brewery.entity.UserEntity;
+import com.braalex.brewery.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
-import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.Map;
+import java.util.List;
+import java.util.Optional;
 
 @Service
 @RequiredArgsConstructor
 public class LoadUserDetailService implements UserDetailsService {
-    private final PasswordEncoder passwordEncoder;
-    private final Map<String, String> inMemoryUsers = new HashMap<>();
+    private final UserRepository userRepository;
 
     @Override
     public UserDetails loadUserByUsername(final String username) throws UsernameNotFoundException {
-        final String password = inMemoryUsers.get(username);
-        if (password == null) {
+        final Optional<UserEntity> userEntity = userRepository.findByEmail(username);
+        if (userEntity.isEmpty()) {
             throw new UsernameNotFoundException("User with email: " + username + " not found");
         } else {
-            return new User(username, password, Collections.emptyList());
+            final SimpleGrantedAuthority authority = new SimpleGrantedAuthority(
+                    "ROLE_" + userEntity.get().getUserRole().name());
+            return new User(username, userEntity.get().getPassword(), List.of(authority));
         }
-    }
-
-    public void saveUser(final String username, final String password) {
-        inMemoryUsers.put(username, passwordEncoder.encode(password));
     }
 }
